busybox-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my
spec:
  containers:
    - name: nginx-con
      image: nginx
