pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: mybox
      image: busybox
      command: ['sh','-c','echo first yml file >/tmp/k8s.txt &&  sleep 3000' ]
