service-darwin.yaml
apiVersion: v1
kind: Service
metadata:
  name: darwin-service
spec:
  ports:
    - name: http
      port: 80
      nodePort: 30080
  selector:
    app: darwin-app
  type: NodePort
