service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30020
  type: NodePort
